<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    tools:context=".About">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="460dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/about" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="364dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/inout_layout"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/divider4"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/divider4"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/inout_layout"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_age"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inout_layout"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_current_weight"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="374dp"
        android:layout_height="67dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/inout_layout"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_height"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/HunterGreen"
        android:text="@string/Continue"
        app:layout_constraintEnd_toEndOf="@+id/editTextText5"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/editTextText5"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>